--- a/blocks/places/__paragraph/places__paragraph.css
+++ b/blocks/places/__paragraph/places__paragraph.css
@@ -4,13 +4,14 @@
   margin: 0 0 26px;
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 1006px) {
   .places__paragraph {
-    font-size: calc(16px + 2 * ((100vw - 768px) / 255));
+    font-size: calc(16px + 2 * ((100vw - 768px) / 238));
+    margin: 0 0 25px;
   }
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 750px) {
   .places__paragraph {
     font-size: 16px;
   }
