--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,17 +1,19 @@
 .header__lang-link {
+  color: #fff;
   font-size: 24px;
   line-height: 1.16;
-  margin: 18px 18px 0 0;
+  text-decoration: none;
+  transition: opacity .6s linear;
+}
+
+.header__lang-link:hover {
+  opacity: .6;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 614px) {
   .header__lang-link {
     font-size: 18px;
     line-height: 1.1;
-    margin-top: 14px;
   }
-}
-
-.header__lang-link:last-of-type {
-  margin-right: 0;
 }
