--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,11 +3,13 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 28px 48px 56px;
+  padding: 28px 0 56px;
 }
 
 @media screen and (max-width: 1262px) {
   .header {
+    padding-right: 48px;
+    padding-left: 48px;
     padding-bottom: 48px;
   }
 }
