--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -5,7 +5,7 @@
   grid-auto-rows: 213px;
   row-gap: 16px;
   column-gap: 16px;
-  padding: 0 48px 92px;
+  padding-bottom: 92px;
 }
 
 @media screen and (max-width: 1262px) {
@@ -14,24 +14,26 @@
     grid-auto-rows: 225px;
     row-gap: 14px;
     column-gap: 14px;
+    padding-left: 48px;
+    padding-right: 48px;
   }
 }
 
 @media screen and (max-width: 1006px) {
   .photo-grid {
-    padding: 0 24px 88px;
     grid-template-columns: repeat(auto-fit, minmax(304px, 1fr));
     grid-auto-rows: 264px;
     row-gap: 16px;
     column-gap: 16px;
+    padding: 0 24px 88px;
   }
 }
 
 @media screen and (max-width: 614px) {
   .photo-grid {
-    padding: 0 16px 64px;
     grid-template-columns: repeat(auto-fit, minmax(auto, 582px));
     grid-auto-rows: 216px;
     row-gap: 12px;
+    padding: 0 16px 64px;
   }
 }
